translate all the things

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ title: cards42 - The activity cards for software architects
     {% endfor %}
 
     <div id="footer">
-        Unterstützt von <a href="https://innoq.com/">innoQ Deutschland GmbH</a> &vert; <a href="https://www.innoq.com/en/datenschutz">Data Privacy</a> &vert; <a href="https://www.innoq.com/en/imprint/">Imprint</a> &vert; <a href="https://www.twitter.com/cards42org">Twitter</a>  
+        Supported by <a href="https://innoq.com/">innoQ Deutschland GmbH</a> &vert; <a href="https://www.innoq.com/en/datenschutz">Data Privacy</a> &vert; <a href="https://www.innoq.com/en/imprint/">Imprint</a> &vert; <a href="https://www.twitter.com/cards42org">Twitter</a>  
     </div>
 </body>
 
