--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
             <div class="col span_2_of_2">
                 <h1><span class="font250">cards<span class="red">42</span></span><span class="font100">.org</span></h1>
 
-                <img class="card-header" src="assets/cards42_header.jpg" alt="Display of different cards42 cards as an example">
+                <img class="card-header" src="assets/cards42_header_en.jpg" alt="Display of different cards42 cards as an example">
 
                 <div class=" font150">
                     <strong class="red">C</strong>ards for 
